<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="4dp"
 	>
 		
 	<Button android:id="@+id/button_menu_event" 
 		android:layout_width="0dp" 
 		android:layout_height="wrap_content"
		android:layout_weight="1"
 		android:text="@string/button_menu_event" />

 	<Button android:id="@+id/button_menu_place" 
 		android:layout_width="0dp" 
 		android:layout_height="wrap_content"
		android:layout_weight="1"
 		android:text="@string/button_menu_place" />
 			
 	<Button android:id="@+id/button_menu_map" 
 		android:layout_width="0dp" 
 		android:layout_height="wrap_content"
		android:layout_weight="1"
 		android:text="@string/button_menu_map" />
 		 		
</LinearLayout>
