<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="4dp"
	 >

	<ScrollView  
		android:id="@+id/scrollview"  
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"  
		>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:orientation="horizontal">
 				
 			<Button android:id="@+id/dialog_map_place_button_default" 
 				android:layout_width="0dp" 
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:background="@android:drawable/btn_default_small"
 				android:text="@string/dialog_button_default" />
 				
 			<Button android:id="@+id/dialog_map_place_button_gps" 
 				android:layout_width="0dp" 
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:background="@android:drawable/btn_default_small"
 				android:text="@string/dialog_button_gps" />

 			<Button android:id="@+id/dialog_map_place_button_marker" 
 				android:layout_width="0dp" 
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:background="@android:drawable/btn_default_small"
 				android:text="@string/dialog_button_marker" />
 				
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:orientation="horizontal">

 			<Button android:id="@+id/dialog_map_place_button_map" 
 				android:layout_width="0dp" 
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:background="@android:drawable/btn_default_small"
 				android:text="@string/dialog_button_map" />

 			<Button android:id="@+id/dialog_button_close" 
 				android:layout_width="0dp" 
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:background="@android:drawable/btn_default_small"
 				android:text="@string/dialog_button_close" />

		</LinearLayout>
		 		
	</LinearLayout> 
	</ScrollView>			
</LinearLayout>