<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dp"
    >

	<LinearLayout
		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="4dp"
 		>

 		<Button android:id="@+id/button_date" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
			android:layout_weight="1"
 			android:text="@string/button_date" />

 		<Button android:id="@+id/button_menu_place" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
			android:layout_weight="1"
 			android:text="@string/button_menu_place" />
 			
 		<Button android:id="@+id/button_menu_map" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
			android:layout_weight="1"
 			android:text="@string/button_menu_map" />
 		 		 		
	</LinearLayout>
			
	<LinearLayout
		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_margin="4dp"
		android:orientation="horizontal"
 		>

    	<TextView 
    		android:id="@+id/textview_title"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="20sp"
			/>
		 	
    	<TextView 
    		android:id="@+id/textview_date"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="4dp"
			/>

    	<TextView 
    		android:id="@+id/textview_count"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="4dp"
			/>

	</LinearLayout>

    <TextView 
    	android:id="@+id/textview_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		/>
					 		                 
    <ListView 
    	android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        />
                        
</LinearLayout>