<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_root"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="4dp"
	 >

    <TextView android:id="@+id/dialog_marker_textview_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="@color/dialog_marker_text"
		android:textSize="20sp"
		/>
		
    <TextView android:id="@+id/dialog_marker_textview_message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:textColor="@color/dialog_marker_text"
		/>
		
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:orientation="horizontal" >

 		<Button android:id="@+id/dialog_marker_button_place" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:background="@android:drawable/btn_default_small"
 			android:text="@string/dialog_button_place" />
 				
 		<Button android:id="@+id/dialog_button_close" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:background="@android:drawable/btn_default_small"
 			android:text="@string/dialog_button_close" />
 				
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:orientation="horizontal" >

 		<Button android:id="@+id/dialog_marker_button_app" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:background="@android:drawable/btn_default_small"
 			android:text="@string/dialog_button_app" />
 				
 		<Button android:id="@+id/dialog_marker_button_navicon" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:background="@android:drawable/btn_default_small"
 			android:text="@string/dialog_button_navicon" />
 				
	</LinearLayout>
		
</LinearLayout>